--- a/printer.cfg
+++ b/printer.cfg
@@ -49,7 +49,7 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 16
-rotation_distance: 33.683
+rotation_distance: 34.528
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
@@ -61,6 +61,7 @@ sensor_pin: P0.24
 #pid_Kd: 114
 min_temp: 0
 max_temp: 260
+max_extrude_only_distance: 100
 
 [safe_z_home]
 home_xy_position: 180, 180
@@ -119,7 +120,8 @@ switch_pin:P1.26
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 2500
+max_accel: 3750
+max_accel_to_decel: 3750
 max_z_velocity: 5
 max_z_accel: 100
 
@@ -202,13 +204,23 @@ aliases:
     EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
 
 [display]
-lcd_type: st7920 
-cs_pin: EXP1_4
-sclk_pin: EXP1_5
-sid_pin: EXP1_3
-encoder_pins: ^EXP2_3, ^EXP2_5
+lcd_type: emulated_st7920
+en_pin: EXP1_4
+spi_software_sclk_pin: EXP1_5
+spi_software_mosi_pin: EXP1_3
+spi_software_miso_pin: EXP1_6
+encoder_pins: ^EXP2_5, ^EXP2_3
 click_pin: ^!EXP1_2
-    
+
+[output_pin beeper]
+pin: EXP1_1
+
+[firmware_retraction]
+retract_length: 0.8
+retract_speed: 60
+unretract_extra_length: 0
+unretract_speed: 60
+
 [force_move]
 enable_force_move: True
 
