--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,6 @@
 #-------------------------------------
 # Ender 5 Plus w/ SKR 1.4 Turbo, 2209's
-# v. 0.3
+# v. 0.8
 #-------------------------------------
 
 [include mainsail.cfg]
@@ -30,14 +30,14 @@
 # shaper_type_y: mzv
 
 #-------------------------------------
-# Extruder
+# Extruder 
 #-------------------------------------
 [extruder]
 step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 16
-rotation_distance: 34.528
+rotation_distance: 22.96112 #NEW rotation_distance = <previous_rotation_distance> x <actual_extrude_distance> / <requested_extrude_distance>
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
@@ -45,7 +45,7 @@ sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.24
 min_temp: 0
 max_temp: 260
-max_extrude_only_distance: 100
+max_extrude_only_distance: 500
 
 #-------------------------------------
 # Printer General
@@ -69,23 +69,30 @@ lift_speed: 200
 samples: 4
 sample_retract_dist: 10
 #Mount Offset
-x_offset: -30.4
-y_offset: -0
+x_offset: -44.5
+y_offset: -7
+#z_offset: 0
 
 [bed_mesh]
 speed: 100
 horizontal_move_z: 10
-mesh_min: 50, 50
-mesh_max: 300,300
-probe_count: 5,5
-mesh_pps: 2,2
+probe_count: 5
 algorithm: bicubic
-bicubic_tension: 0.2
-move_check_distance: 5
-split_delta_z: .025
-fade_start: 1
-fade_end: 10
-fade_target: 0
+mesh_min: 50,50
+mesh_max: 300,300
+#speed: 100
+#horizontal_move_z: 10
+#mesh_min: 50, 50
+#mesh_max: 300,300
+#probe_count: 5,5
+#mesh_pps: 2,2
+#algorithm: bicubic
+#bicubic_tension: 0.2
+#move_check_distance: 5
+#split_delta_z: .025
+#fade_start: 1
+#fade_end: 10
+#fade_target: 0
 
 [heater_bed]
 heater_pin: P2.5
@@ -105,9 +112,9 @@ switch_pin:P1.26
 
 [printer]
 kinematics: cartesian
-max_velocity: 150
-max_accel: 3000
-max_accel_to_decel: 3000
+max_velocity: 400
+max_accel: 3500
+max_accel_to_decel: 3500
 max_z_velocity: 10
 max_z_accel: 100
 square_corner_velocity: 20
@@ -116,17 +123,186 @@ square_corner_velocity: 20
 sensor_type: temperature_host
 max_temp: 100
 
-#[temperature_sensor mcu_temp]
-#sensor_type: temperature_mcu
-#max_temp: 100
+#-------------------------------------
+# Bed Leveling
+#-------------------------------------
+[z_tilt]
+z_positions: -18.4,180
+  378.4,180
+points: 35,180
+  360,180
+speed: 50
+horizontal_move_z: 5
+retries: 10
+retry_tolerance:0.01
+
+[screws_tilt_adjust]
+screw1: 27.5, 47
+screw1_name: front left screw
+screw2: 327.5, 47
+screw2_name: front right screw
+screw3: 327.5, 307
+screw3_name: rear right screw
+screw4: 27.5, 307
+screw4_name: rear left screw
+horizontal_move_z: 10.
+speed: 50.
+screw_thread: CW-M3
+
+[bed_screws]
+screw1: 27.5, 47
+screw2: 327.5, 47
+screw3: 327.5, 307
+screw4:  27.5, 307
+
+#-------------------------------------
+# Board 
+#-------------------------------------
+[board_pins]
+aliases:
+    EXP1_1=P1.30, EXP1_3=P1.18, EXP1_5=P1.20, EXP1_7=P1.22, EXP1_9=<GND>,
+    EXP1_2=P0.28, EXP1_4=P1.19, EXP1_6=P1.21, EXP1_8=P1.23, EXP1_10=<5V>,
+    EXP2_1=P0.17, EXP2_3=P3.26, EXP2_5=P3.25, EXP2_7=P1.31, EXP2_9=<GND>,
+    EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
+
+[display]
+lcd_type: emulated_st7920
+en_pin: EXP1_4
+spi_software_sclk_pin: EXP1_5
+spi_software_mosi_pin: EXP1_3
+spi_software_miso_pin: EXP1_6
+encoder_pins: ^EXP2_5, ^EXP2_3
+click_pin: ^!EXP1_2
+
+[output_pin BEEPER_pin]
+pin: EXP1_1
+pwm: True
+value: 0
+shutdown_value: 0
+cycle_time: 0.001
+
+#-------------------------------------
+# Others
+#-------------------------------------
+[force_move]
+enable_force_move: True
+[virtual_sdcard]
+path: /home/pi/printer_data/gcodes
+[exclude_object]
+[display_status]
+[pause_resume]
+
+#[adxl345]
+# cs_pin: rpi:None
+#[resonance_tester]
+# accel_chip: adxl345
+#probe_points:
+#   177.5, 177.5, 20
+#[respond]
+# default_type: echo
+
+[idle_timeout]
+timeout: 1800
+gcode:
+ TURN_OFF_HEATERS
+
+#-------------------------------------
+# Stepper Drivers
+#-------------------------------------
+[tmc2209 stepper_x]
+uart_pin: P1.10
+interpolate: true
+sense_resistor: 0.110
+run_current: 0.800
+hold_current: 0.800
+stealthchop_threshold: 999999
+
+[tmc2209 stepper_y]
+uart_pin: P1.9
+interpolate: true
+sense_resistor: 0.110
+run_current: 0.800
+hold_current: 0.800
+stealthchop_threshold: 999999
+
+[tmc2209 stepper_z]
+uart_pin: P1.8
+interpolate: true
+sense_resistor: 0.110
+run_current: 0.800
+hold_current: 0.800
+stealthchop_threshold: 999999
+
+[tmc2209 stepper_z1]
+uart_pin: P1.1
+interpolate: true
+sense_resistor: 0.110
+run_current: 0.800
+hold_current: 0.800
+stealthchop_threshold: 999999
+
+[tmc2209 extruder]
+uart_pin: P1.4
+run_current: 0.800
+stealthchop_threshold: 999999
+
+#-------------------------------------
+# Steppers
+#-------------------------------------
+[stepper_x]
+step_pin: P2.2
+dir_pin: !P2.6
+enable_pin: !P2.1
+microsteps: 16
+rotation_distance: 39.88
+endstop_pin: P1.29
+position_endstop: 360
+position_min: 0
+position_max: 360
+homing_speed: 50
+homing_retract_dist: 5
+
+[stepper_y]
+step_pin: P0.19
+dir_pin: !P0.20
+enable_pin: !P2.8
+microsteps: 16
+rotation_distance: 39.83
+endstop_pin: P1.28
+position_endstop: 360
+position_min: 0
+position_max: 360
+homing_speed: 50
+homing_retract_dist: 5
+
+[stepper_z]
+step_pin: P0.22
+dir_pin: !P2.11
+enable_pin: !P0.21
+microsteps: 16
+rotation_distance: 4
+endstop_pin: probe:z_virtual_endstop
+position_max: 400
+position_min: -5
+
+[stepper_z1]
+step_pin: P1.15
+dir_pin: !P1.14
+enable_pin: !P1.16
+microsteps: 16
+rotation_distance: 4
 
 #-------------------------------------
 # Macros
 #-------------------------------------
-
 [gcode_macro G29]
-gcode:
+gcode: 
+  G28
+  M190 S60
   BED_MESH_CALIBRATE
+  BED_MESH_PROFILE SAVE=p1
+  # G1 X0 Y0 Z5 F4000
+  M140 S0
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
@@ -180,295 +356,50 @@ gcode:
 description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_BASE
 gcode:
-  TURN_OFF_HEATERS
+#  TURN_OFF_HEATERS
   CANCEL_PRINT_BASE
 
 [gcode_macro load_mesh]
 gcode:
     BED_MESH_PROFILE load=default
 
-[gcode_macro _load_unload]
-variable_is_printing: 1
+[gcode_macro LOAD_FILAMENT]
 gcode:
-  SET_GCODE_VARIABLE MACRO=_load_unload VARIABLE=is_printing VALUE="{1}"
-  {% set saved_extruder = printer.toolhead.extruder %}
-  {% set EXTRUDER = params.EXTRUDER|default(saved_extruder)|lower %}
-  {% set MINIMUM = params.MINIMUM|default(
-           printer.configfile.settings[EXTRUDER].min_extrude_temp + 5.0) %}
-  {% if MINIMUM < printer.configfile.settings[EXTRUDER].min_extrude_temp %}
-    { action_raise_error("Extrude below minimum temp.") }
-  {% elif printer.idle_timeout.state == "Printing" and is_printing and
-     not printer.pause_resume.is_paused %}
-    { action_raise_error("Command not valid during printing.") }
-  {% endif %}
-  {% set km = printer["gcode_macro _km_globals"] %}
-  {% set SPEED = params.SPEED|default(km.load_speed) %}
-  {% set priming_length = km.load_priming_length %}
-  {% set LENGTH = params.LENGTH|default(km.load_length)|float - priming_length%}
-  {% if LENGTH < 0 %}
-    {% set priming_length = (priming_length + LENGTH, 0)|max %}
-    {% set LENGTH = 0 %}
-  {% endif %}
-  SAVE_GCODE_STATE NAME=_LOAD_UNLOAD
-  {% if EXTRUDER != saved_extruder%}
-    ACTIVATE_EXTRUDER EXTRUDER={EXTRUDER}
-  {% endif %}
-  {% if printer[EXTRUDER].target < MINIMUM %}
-    M109 S{MINIMUM}
-  {% endif %}
-  M83
-  {% if params.LOAD|int %}
-    G1 E{LENGTH} F{SPEED}
-    G1 E{priming_length} F{(km.load_priming_speed, SPEED)|min}
-    G1 E{'%.4f' % -printer["gcode_macro resume"].saved_e} F{km.load_speed}
-  {% else %}
-    G1 E3.0 F{SPEED}
-    G4 P500
-    G1 E{'%.4f' % -priming_length} F{(km.load_priming_speed, SPEED)|min}
-    G1 E{'%.4f' % -LENGTH} F{SPEED}
-  {% endif %}
-  RESTORE_GCODE_STATE NAME=_LOAD_UNLOAD
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=load_state
+    M300 # beep
+    G91
+    G92 E0
+    G1 E350 F{max_velocity} # fast-load
+    G1 E25 F{speed} # purge
+    M300
+    M300
+    RESTORE_GCODE_STATE NAME=load_state
 
-[gcode_macro load_filament]
-description: Loads filament to the extruder.
-  Usage: LOAD_FILAMENT [LENGTH=<distance>] [SPEED=<speed>]
-                       [EXTRUDER=<extruder>] [MINIMUM=<temperature>]
+[gcode_macro UNLOAD_FILAMENT]
 gcode:
-  _LOAD_UNLOAD LOAD=1{% for k in params
-    %}{' '~k~'="'~params[k]~'"'}{% endfor %}
-  {% set dummy = None if True else "
-  {% set dummy = params.LENGTH|default(variable_load_length)|float %}
-  {% set dummy = params.SPEED|default(variable_load_speed)|float %}
-  {% set dummy = params.EXTRUDER|default(current extruder) %}
-  {% set dummy = params.MINIMUM|default(min_extrude_temp)|int %}
-  " %} 
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=unload_state
+    G91
+    M300 # beep
+    G92 E0
+    G1 E25 F{speed} # purge
+    G1 E-420 F{max_velocity} # fast-unload
+    M300
+    M300
+    RESTORE_GCODE_STATE NAME=unload_state
 
-[gcode_macro unload_filament]
-description: Unloads filament from the extruder.
-  Usage: UNLOAD_FILAMENT [LENGTH=<distance>] [SPEED=<speed>]
-                         [EXTRUDER=<extruder>] [MINIMUM=<temperature>]
+[gcode_macro M300]
 gcode:
-  _LOAD_UNLOAD LOAD=0{% for k in params
-    %}{' '~k~'="'~params[k]~'"'}{% endfor %}
-  {% set dummy = None if True else "
-  {% set dummy = params.LENGTH|default(variable_load_length)|float %}
-  {% set dummy = params.SPEED|default(variable_load_speed)|float %}
-  {% set dummy = params.EXTRUDER|default(default extruder) %}
-  {% set dummy = params.MINIMUM|default(min_extrude_temp)|int %}
-  " %}
-
-[gcode_macro _pause_inner_m700]
-gcode:
-  {% set extruder = printer["extruder" ~ params.T|int]
-     if params.T|default(0)|int != 0 else printer.toolhead.extruder %}
-  {% if extruder != printer.toolhead.extruder%}
-    ACTIVATE_EXTRUDER EXTRUDER={extruder}
-  {% endif %}
-
-  {% set z_param = (' Z="%f"' % params.Z) if 'Z' in params else "" %}
-
-  {% if printer.idle_timeout.state|string == "Printing" %}
-    PAUSE P=2{z_param}
-  {% elif not printer.pause_resume.is_paused%}
-    SET_GCODE_VARIABLE MACRO=_load_unload VARIABLE=is_printing VALUE="{0}"
-    PARK P=2{z_param}
-  {% endif %}
-
-[gcode_macro m701]
-description: Pauses/parks the toolhead then loads filament to the extruder.
-  Usage: M701 [L<distance>] [Z<pos>] [T<extruder>]
-gcode:
-  {% if 'U' in params %}
-    {% if not 'L' in params %}
-      RESPOND TYPE=error MSG="Argument \"U\" substituted for missing \"L\"."
-      {% set dummy = params.__setitem__("L", params.U) %}
-    {% else %}
-      RESPOND TYPE=error MSG="Invalid argument \"U\" ignored."
-    {% endif %}
-  {% endif %}
-
-  _PAUSE_INNER_M700 {% for k in params %}{' '~k~'="'~params[k]~'"'}{% endfor %}
-  LOAD_FILAMENT LENGTH={
-    params.L|default(printer["gcode_macro _km_globals"].load_length)|float}
-
-[gcode_macro m702]
-description: Pauses/parks the toolhead then unloads filament from the extruder.
-  Usage: M702 [U<distance>] [Z<pos>] [T<extruder>]
-gcode:
-  {% if 'L' in params %}
-    {% if not 'U' in params %}
-      RESPOND TYPE=error MSG="Argument \"L\" substituted for missing \"U\"."
-      {% set dummy = params.__setitem__("U", params.L) %}
-    {% else %}
-      RESPOND TYPE=error MSG="Invalid argument \"L\" ignored."
-    {% endif %}
-  {% endif %}
-
-  _PAUSE_INNER_M700 {% for k in params %}{' '~k~'="'~params[k]~'"'}{% endfor %}
-  UNLOAD_FILAMENT LENGTH={
-    params.U|default(printer["gcode_macro _km_globals"].load_length)|float}
-
-#-------------------------------------
-# Bed Leveling
-#-------------------------------------
-[z_tilt]
-z_positions:-20,175
-            370,175
-points: 55,175
-        330,175
-speed: 80
-horizontal_move_z: 5
-retries: 4
-retry_tolerance: 0.005
-
-[screws_tilt_adjust]
-screw1: 48,54
-screw1_name: front left screw
-screw2: 332,54
-screw2_name: front right screw
-screw3: 332,315
-screw3_name: rear right screw
-screw4: 48,315
-screw4_name: rear left screw
-horizontal_move_z: 10.
-speed: 50.
-screw_thread: CCW-M4
-
-[bed_screws]
-screw1: 26,39
-screw2: 310,39
-screw3: 310,300
-screw4: 26,300
-
-#-------------------------------------
-# Board 
-#-------------------------------------
-[board_pins]
-aliases:
-    EXP1_1=P1.30, EXP1_3=P1.18, EXP1_5=P1.20, EXP1_7=P1.22, EXP1_9=<GND>,
-    EXP1_2=P0.28, EXP1_4=P1.19, EXP1_6=P1.21, EXP1_8=P1.23, EXP1_10=<5V>,
-    EXP2_1=P0.17, EXP2_3=P3.26, EXP2_5=P3.25, EXP2_7=P1.31, EXP2_9=<GND>,
-    EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
-
-[display]
-lcd_type: emulated_st7920
-en_pin: EXP1_4
-spi_software_sclk_pin: EXP1_5
-spi_software_mosi_pin: EXP1_3
-spi_software_miso_pin: EXP1_6
-encoder_pins: ^EXP2_5, ^EXP2_3
-click_pin: ^!EXP1_2
-
-[output_pin beeper]
-pin: EXP1_1
-
-#-------------------------------------
-# Others
-#-------------------------------------
-[force_move]
-enable_force_move: True
-[virtual_sdcard]
-path: ~/gcode_files
-[exclude_object]
-[display_status]
-[pause_resume]
-
-#[adxl345]
-# cs_pin: rpi:None
-#[resonance_tester]
-# accel_chip: adxl345
-#probe_points:
-#   177.5, 177.5, 20
-#[respond]
-# default_type: echo
-
-[idle_timeout]
-timeout: 1800
-gcode:
-  TURN_OFF_HEATERS
-
-#-------------------------------------
-# Stepper Drivers
-#-------------------------------------
-[tmc2209 stepper_x]
-uart_pin: P1.10
-interpolate: true
-sense_resistor: 0.110
-run_current: 0.45
-stealthchop_threshold: 999999
-
-[tmc2209 stepper_y]
-uart_pin: P1.9
-interpolate: true
-sense_resistor: 0.110
-run_current: 0.57
-stealthchop_threshold: 999999
-
-[tmc2209 stepper_z]
-uart_pin: P1.8
-interpolate: true
-sense_resistor: 0.110
-run_current: 0.48
-stealthchop_threshold: 999999
-
-[tmc2209 stepper_z1]
-uart_pin: P1.1
-interpolate: true
-sense_resistor: 0.110
-run_current: 0.48
-stealthchop_threshold: 999999
-
-[tmc2209 extruder]
-uart_pin: P1.4
-run_current: 0.800
-stealthchop_threshold: 999999
-
-#-------------------------------------
-# Steppers
-#-------------------------------------
-[stepper_x]
-step_pin: P2.2
-dir_pin: !P2.6
-enable_pin: !P2.1
-microsteps: 16
-rotation_distance: 39.88
-endstop_pin: P1.29
-position_endstop: 360
-position_min: 0
-position_max: 360
-homing_speed: 50
-homing_retract_dist: 5
-
-[stepper_y]
-step_pin: P0.19
-dir_pin: !P0.20
-enable_pin: !P2.8
-microsteps: 16
-rotation_distance: 39.83
-endstop_pin: P1.28
-position_endstop: 360
-position_min: 0
-position_max: 360
-homing_speed: 50
-homing_retract_dist: 5
-
-[stepper_z]
-step_pin: P0.22
-dir_pin: !P2.11
-enable_pin: !P0.21
-microsteps: 16
-rotation_distance: 4
-endstop_pin: probe:z_virtual_endstop
-position_max: 400
-position_min: -5
-homing_speed: 10.0
-
-[stepper_z1]
-step_pin: P1.15
-dir_pin: !P1.14
-enable_pin: !P1.16
-microsteps: 16
-rotation_distance: 4
+    # Use a default 1kHz tone if S is omitted.
+    {% set S = params.S|default(1000)|int %}
+    # Use a 10ms duration is P is omitted.
+    {% set P = params.P|default(100)|int %}
+    SET_PIN PIN=BEEPER_pin VALUE=0.5 CYCLE_TIME={ 1.0/S if S > 0 else 1 }
+    G4 P{P}
+    SET_PIN PIN=BEEPER_pin VALUE=0
 
 #-------------------------------------
 # Printer Save Config
@@ -479,34 +410,34 @@ rotation_distance: 4
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 25.111
-#*# pid_ki = 1.249
-#*# pid_kd = 126.180
+#*# pid_kp = 26.125
+#*# pid_ki = 1.290
+#*# pid_kd = 132.258
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 77.209
-#*# pid_ki = 1.046
-#*# pid_kd = 1424.507
+#*# pid_kp = 75.364
+#*# pid_ki = 7.076
+#*# pid_kd = 200.656
 #*#
 #*# [bltouch]
-#*# z_offset = 3.299
+#*# z_offset = 3.324
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.021875, 0.016875, 0.029375, 0.010625, -0.076250
-#*# 	  -0.005000, 0.013125, 0.026875, 0.008750, -0.064375
-#*# 	  -0.008750, 0.017500, 0.028750, 0.011250, -0.051875
-#*# 	  -0.013125, 0.006250, 0.020000, -0.004375, -0.069375
-#*# 	  -0.002500, 0.001875, 0.015625, -0.010625, -0.081250
-#*# tension = 0.2
-#*# min_x = 50.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 50.0
+#*# 	  -0.093125, -0.064688, -0.035938, -0.045000, -0.066250
+#*# 	  -0.055938, -0.027813, -0.010000, -0.011875, -0.064063
+#*# 	  -0.043438, -0.010938, 0.015625, 0.003125, -0.050938
+#*# 	  -0.062813, -0.028125, -0.009063, -0.020313, -0.076250
+#*# 	  -0.073438, -0.046563, -0.038750, -0.044063, -0.095313
 #*# x_count = 5
-#*# max_y = 300.0
+#*# y_count = 5
 #*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 49.989999999999995
 #*# max_x = 300.0
+#*# min_y = 50.0
+#*# max_y = 300.0
