--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,6 @@
 #-------------------------------------
 # Ender 5 Plus w/ SKR 1.4 Turbo, 2209's
-# v. 0.8
+# v. 0.9
 #-------------------------------------
 
 [include mainsail.cfg]
@@ -37,7 +37,7 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 16
-rotation_distance: 22.96112 #NEW rotation_distance = <previous_rotation_distance> x <actual_extrude_distance> / <requested_extrude_distance>
+rotation_distance: 22.600000 #NEW rotation_distance = <previous_rotation_distance> x <actual_extrude_distance> / <requested_extrude_distance>
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
@@ -69,8 +69,8 @@ lift_speed: 200
 samples: 4
 sample_retract_dist: 10
 #Mount Offset
-x_offset: -44.5
-y_offset: -7
+x_offset: -43.5
+y_offset: -5.9
 #z_offset: 0
 
 [bed_mesh]
@@ -112,12 +112,10 @@ switch_pin:P1.26
 
 [printer]
 kinematics: cartesian
-max_velocity: 400
-max_accel: 3500
-max_accel_to_decel: 3500
-max_z_velocity: 10
+max_velocity: 300
+max_accel: 2500
+max_z_velocity: 5
 max_z_accel: 100
-square_corner_velocity: 20
 
 [temperature_sensor raspberry_pi]
 sensor_type: temperature_host
@@ -133,27 +131,40 @@ points: 35,180
   360,180
 speed: 50
 horizontal_move_z: 5
-retries: 10
+retries: 15
 retry_tolerance:0.01
 
+#[screws_tilt_adjust]
+#screw1: 27.5, 47
+#screw1_name: front left screw
+#screw2: 327.5, 47
+#screw2_name: front right screw
+#screw3: 327.5, 307
+#screw3_name: rear right screw
+#screw4: 27.5, 307
+#screw4_name: rear left screw
+#horizontal_move_z: 10.
+#speed: 50.
+#screw_thread: CW-M3
+
 [screws_tilt_adjust]
-screw1: 27.5, 47
+screw1: 71,60
 screw1_name: front left screw
-screw2: 327.5, 47
+screw2: 332,60
 screw2_name: front right screw
-screw3: 327.5, 307
+screw3: 332,321
 screw3_name: rear right screw
-screw4: 27.5, 307
+screw4: 71,321
 screw4_name: rear left screw
 horizontal_move_z: 10.
 speed: 50.
-screw_thread: CW-M3
+screw_thread: CW-M4
 
 [bed_screws]
 screw1: 27.5, 47
 screw2: 327.5, 47
 screw3: 327.5, 307
-screw4:  27.5, 307
+screw4: 27.5, 307
 
 #-------------------------------------
 # Board 
@@ -211,39 +222,37 @@ gcode:
 #-------------------------------------
 [tmc2209 stepper_x]
 uart_pin: P1.10
-interpolate: true
+interpolate: False 
 sense_resistor: 0.110
 run_current: 0.800
-hold_current: 0.800
+hold_current: 0.500
 stealthchop_threshold: 999999
 
 [tmc2209 stepper_y]
 uart_pin: P1.9
-interpolate: true
+interpolate: False 
 sense_resistor: 0.110
 run_current: 0.800
-hold_current: 0.800
 stealthchop_threshold: 999999
 
-[tmc2209 stepper_z]
+[tmc2209 stepper_z] #z
 uart_pin: P1.8
-interpolate: true
+interpolate: False 
 sense_resistor: 0.110
 run_current: 0.800
-hold_current: 0.800
 stealthchop_threshold: 999999
 
-[tmc2209 stepper_z1]
+[tmc2209 stepper_z1] #z1
 uart_pin: P1.1
-interpolate: true
+interpolate: False 
 sense_resistor: 0.110
 run_current: 0.800
-hold_current: 0.800
 stealthchop_threshold: 999999
 
 [tmc2209 extruder]
 uart_pin: P1.4
 run_current: 0.800
+interpolate: False 
 stealthchop_threshold: 999999
 
 #-------------------------------------
@@ -276,9 +285,9 @@ homing_speed: 50
 homing_retract_dist: 5
 
 [stepper_z]
-step_pin: P0.22
-dir_pin: !P2.11
-enable_pin: !P0.21
+step_pin: P1.15
+dir_pin: !P1.14
+enable_pin: !P1.16
 microsteps: 16
 rotation_distance: 4
 endstop_pin: probe:z_virtual_endstop
@@ -286,21 +295,57 @@ position_max: 400
 position_min: -5
 
 [stepper_z1]
-step_pin: P1.15
-dir_pin: !P1.14
-enable_pin: !P1.16
+step_pin: P0.22
+dir_pin: !P2.11
+enable_pin: !P0.21
 microsteps: 16
 rotation_distance: 4
+endstop_pin: probe:z_virtual_endstop
 
 #-------------------------------------
 # Macros
 #-------------------------------------
+[gcode_macro _CLIENT_VARIABLE]
+variable_use_custom_pos  : False ; use custom park coordinates for x,y [True/False] 
+variable_custom_park_x   : 0.0   ; custom x position; value must be within your defined min and max of X
+variable_custom_park_y   : 0.0   ; custom y position; value must be within your defined min and max of Y
+variable_custom_park_dz  : 2.0   ; custom dz value; the value in mm to lift the nozzle when move to park position 
+variable_retract         : 1.0   ; the value to retract while PAUSE
+variable_cancel_retract  : 5.0   ; the value to retract while CANCEL_PRINT
+variable_speed_retract   : 35.0  ; retract speed in mm/s
+variable_unretract       : 1.0   ; the value to unretract while RESUME
+variable_speed_unretract : 35.0  ; unretract speed in mm/s
+variable_speed_hop       : 15.0  ; z move speed in mm/s
+variable_speed_move      : 100.0 ; move speed in mm/s
+variable_park_at_cancel  : False ; allow to move the toolhead to park while execute CANCEL_PRINT [True,False]
+## !!! Caution [firmware_retraction] must be defined in the printer.cfg if you set use_fw_retract: True !!!
+#variable_use_fw_retract  : False ; use fw_retraction instead of the manual version [True/False] 
+gcode:
+
+[gcode_macro BEEP_ALERT]
+gcode:
+	M300 S200 P200
+	M300 S200 P200
+	M300 S200 P200
+	
+[gcode_macro BEEP_READY]
+gcode:
+	M300 S500 P50
+	M300 S600 P50
+	M300 S700 P50
+
+[gcode_macro BEEP_CONFIRM]
+gcode:
+	M300 S1000 P100
+	M300 S1200 P100
+	M300 S1400 P100
+
 [gcode_macro G29]
 gcode: 
   G28
   M190 S60
   BED_MESH_CALIBRATE
-  BED_MESH_PROFILE SAVE=p1
+  BED_MESH_PROFILE SAVE=default
   # G1 X0 Y0 Z5 F4000
   M140 S0
 
@@ -410,34 +455,34 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 26.125
-#*# pid_ki = 1.290
-#*# pid_kd = 132.258
+#*# pid_kp = 24.912
+#*# pid_ki = 1.339
+#*# pid_kd = 115.839
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 75.364
-#*# pid_ki = 7.076
-#*# pid_kd = 200.656
+#*# pid_kp = 76.850
+#*# pid_ki = 1.001
+#*# pid_kd = 1475.525
 #*#
 #*# [bltouch]
-#*# z_offset = 3.324
+#*# z_offset = 3.109
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.093125, -0.064688, -0.035938, -0.045000, -0.066250
-#*# 	  -0.055938, -0.027813, -0.010000, -0.011875, -0.064063
-#*# 	  -0.043438, -0.010938, 0.015625, 0.003125, -0.050938
-#*# 	  -0.062813, -0.028125, -0.009063, -0.020313, -0.076250
-#*# 	  -0.073438, -0.046563, -0.038750, -0.044063, -0.095313
+#*# 	  -0.053125, -0.039688, -0.019375, -0.030000, -0.109063
+#*# 	  -0.023750, 0.001562, 0.024062, 0.007812, -0.084063
+#*# 	  -0.005938, 0.019687, 0.048750, 0.021250, -0.067188
+#*# 	  -0.042813, -0.004688, 0.027187, 0.019375, -0.071875
+#*# 	  -0.057188, -0.041875, -0.019688, -0.029688, -0.095938
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 49.989999999999995
+#*# min_x = 50.0
 #*# max_x = 300.0
 #*# min_y = 50.0
 #*# max_y = 300.0
