--- a/printer.cfg
+++ b/printer.cfg
@@ -37,7 +37,7 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 16
-rotation_distance: 22.600000 #NEW rotation_distance = <previous_rotation_distance> x <actual_extrude_distance> / <requested_extrude_distance>
+rotation_distance: 8 #NEW rotation_distance = <previous_rotation_distance> x <actual_extrude_distance> / <requested_extrude_distance>
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
@@ -69,30 +69,18 @@ lift_speed: 200
 samples: 4
 sample_retract_dist: 10
 #Mount Offset
-x_offset: -43.5
-y_offset: -5.9
+x_offset: -42.5
+y_offset: -14
 #z_offset: 0
 
 [bed_mesh]
 speed: 100
-horizontal_move_z: 10
-probe_count: 5
-algorithm: bicubic
-mesh_min: 50,50
-mesh_max: 300,300
-#speed: 100
-#horizontal_move_z: 10
-#mesh_min: 50, 50
-#mesh_max: 300,300
-#probe_count: 5,5
-#mesh_pps: 2,2
-#algorithm: bicubic
-#bicubic_tension: 0.2
-#move_check_distance: 5
-#split_delta_z: .025
-#fade_start: 1
-#fade_end: 10
-#fade_target: 0
+horizontal_move_z: 5
+mesh_min: 5, 15
+mesh_max: 310,337
+probe_count: 5,5
+fade_start: 1
+fade_end: 10
 
 [heater_bed]
 heater_pin: P2.5
@@ -127,7 +115,7 @@ max_temp: 100
 [z_tilt]
 z_positions: -18.4,180
   378.4,180
-points: 35,180
+points: 38,180
   360,180
 speed: 50
 horizontal_move_z: 5
@@ -455,9 +443,9 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 24.912
-#*# pid_ki = 1.339
-#*# pid_kd = 115.839
+#*# pid_kp = 28.979
+#*# pid_ki = 1.558
+#*# pid_kd = 134.755
 #*#
 #*# [heater_bed]
 #*# control = pid
@@ -466,23 +454,23 @@ gcode:
 #*# pid_kd = 1475.525
 #*#
 #*# [bltouch]
-#*# z_offset = 3.109
+#*# z_offset = 3.550
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.053125, -0.039688, -0.019375, -0.030000, -0.109063
-#*# 	  -0.023750, 0.001562, 0.024062, 0.007812, -0.084063
-#*# 	  -0.005938, 0.019687, 0.048750, 0.021250, -0.067188
-#*# 	  -0.042813, -0.004688, 0.027187, 0.019375, -0.071875
-#*# 	  -0.057188, -0.041875, -0.019688, -0.029688, -0.095938
+#*# 	  -0.148125, -0.127188, -0.105938, -0.106875, -0.149688
+#*# 	  -0.100000, -0.073438, -0.047188, -0.049063, -0.106875
+#*# 	  -0.083438, -0.045625, -0.011250, -0.026563, -0.095313
+#*# 	  -0.108438, -0.083750, -0.050000, -0.057813, -0.115625
+#*# 	  -0.114375, -0.095938, -0.090000, -0.089375, -0.135313
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
-#*# algo = bicubic
+#*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 50.0
-#*# max_x = 300.0
-#*# min_y = 50.0
-#*# max_y = 300.0
+#*# min_x = 5.0
+#*# max_x = 310.01
+#*# min_y = 14.989999999999998
+#*# max_y = 337.0
