--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,6 @@
 #-------------------------------------
 # Ender 5 Plus w/ SKR 1.4 Turbo, 2209's
-# v. 0.9
+# v. 0.10
 #-------------------------------------
 
 [include mainsail.cfg]
@@ -23,12 +23,16 @@
 #-------------------------------------
 # Input Shaper
 #-------------------------------------
-# [input_shaper]
-# shaper_freq_x: 82.8
-# shaper_type_x: mzv
-# shaper_freq_y: 70.2
-# shaper_type_y: mzv
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
 
+#[adxl345]
+#cs_pin: rpi:None
+
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#  180, 180, 20  # an example
 #-------------------------------------
 # Extruder 
 #-------------------------------------
@@ -71,7 +75,6 @@ sample_retract_dist: 10
 #Mount Offset
 x_offset: -42.5
 y_offset: -14
-#z_offset: 0
 
 [bed_mesh]
 speed: 100
@@ -86,8 +89,10 @@ fade_end: 10
 heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.25
+max_power: 0.8
 min_temp: 0
 max_temp: 130
+pwm_cycle_time: 0.01666
 
 [fan]
 pin: P2.3
@@ -121,19 +126,6 @@ speed: 50
 horizontal_move_z: 5
 retries: 15
 retry_tolerance:0.01
-
-#[screws_tilt_adjust]
-#screw1: 27.5, 47
-#screw1_name: front left screw
-#screw2: 327.5, 47
-#screw2_name: front right screw
-#screw3: 327.5, 307
-#screw3_name: rear right screw
-#screw4: 27.5, 307
-#screw4_name: rear left screw
-#horizontal_move_z: 10.
-#speed: 50.
-#screw_thread: CW-M3
 
 [screws_tilt_adjust]
 screw1: 71,60
@@ -190,13 +182,6 @@ path: /home/pi/printer_data/gcodes
 [exclude_object]
 [display_status]
 [pause_resume]
-
-#[adxl345]
-# cs_pin: rpi:None
-#[resonance_tester]
-# accel_chip: adxl345
-#probe_points:
-#   177.5, 177.5, 20
 #[respond]
 # default_type: echo
 
@@ -299,7 +284,7 @@ variable_custom_park_x   : 0.0   ; custom x position; value must be within your 
 variable_custom_park_y   : 0.0   ; custom y position; value must be within your defined min and max of Y
 variable_custom_park_dz  : 2.0   ; custom dz value; the value in mm to lift the nozzle when move to park position 
 variable_retract         : 1.0   ; the value to retract while PAUSE
-variable_cancel_retract  : 5.0   ; the value to retract while CANCEL_PRINT
+variable_cancel_retract  : 1  ; the value to retract while CANCEL_PRINT
 variable_speed_retract   : 35.0  ; retract speed in mm/s
 variable_unretract       : 1.0   ; the value to unretract while RESUME
 variable_speed_unretract : 35.0  ; unretract speed in mm/s
@@ -396,34 +381,6 @@ gcode:
 gcode:
     BED_MESH_PROFILE load=default
 
-[gcode_macro LOAD_FILAMENT]
-gcode:
-    {% set speed = params.SPEED|default(300) %}
-    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
-    SAVE_GCODE_STATE NAME=load_state
-    M300 # beep
-    G91
-    G92 E0
-    G1 E350 F{max_velocity} # fast-load
-    G1 E25 F{speed} # purge
-    M300
-    M300
-    RESTORE_GCODE_STATE NAME=load_state
-
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-    {% set speed = params.SPEED|default(300) %}
-    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
-    SAVE_GCODE_STATE NAME=unload_state
-    G91
-    M300 # beep
-    G92 E0
-    G1 E25 F{speed} # purge
-    G1 E-420 F{max_velocity} # fast-unload
-    M300
-    M300
-    RESTORE_GCODE_STATE NAME=unload_state
-
 [gcode_macro M300]
 gcode:
     # Use a default 1kHz tone if S is omitted.
@@ -449,9 +406,9 @@ gcode:
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 76.850
-#*# pid_ki = 1.001
-#*# pid_kd = 1475.525
+#*# pid_kp = 61.999
+#*# pid_ki = 0.771
+#*# pid_kd = 1246.178
 #*#
 #*# [bltouch]
 #*# z_offset = 3.550
@@ -459,11 +416,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.148125, -0.127188, -0.105938, -0.106875, -0.149688
-#*# 	  -0.100000, -0.073438, -0.047188, -0.049063, -0.106875
-#*# 	  -0.083438, -0.045625, -0.011250, -0.026563, -0.095313
-#*# 	  -0.108438, -0.083750, -0.050000, -0.057813, -0.115625
-#*# 	  -0.114375, -0.095938, -0.090000, -0.089375, -0.135313
+#*# 	-0.148125, -0.127188, -0.105938, -0.106875, -0.149688
+#*# 	-0.100000, -0.073438, -0.047188, -0.049063, -0.106875
+#*# 	-0.083438, -0.045625, -0.011250, -0.026563, -0.095313
+#*# 	-0.108438, -0.083750, -0.050000, -0.057813, -0.115625
+#*# 	-0.114375, -0.095938, -0.090000, -0.089375, -0.135313
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -474,3 +431,9 @@ gcode:
 #*# max_x = 310.01
 #*# min_y = 14.989999999999998
 #*# max_y = 337.0
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = mzv
+#*# shaper_freq_x = 70.6
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 57.0
